# py-mundane

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: tests.yml
ingress/: app.py
mundane/: app.py  app_test.py  constants.py  constants_test.py  log_mgr.py  log_mgr_test.py
mundane/examples/: demo.py  nebulous.py
mundane/test_data/: flags_one.py  flags_three.py  flags_two.py
nexushoratio/: app.py  app_test.py
nexushoratio/test_data/: flags_one.py  flags_two.py
py/: app.py
