[project]
name = 'nexushoratio'
description = 'A small library for handling mundane things.'
license = {file = 'LICENSE'}
keywords = ['argparse', 'logging', 'cli']
classifiers = [
  'Programming Language :: Python :: 3',
  'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
  'Operating System :: POSIX',
]
authors = [
  {name = 'Mike Castle', email = 'dalgoda@gmail.com'},
]
dependencies = [
  'humanize>=4.4.0',
]
dynamic = ['version']

[project.urls]
Repository = 'https://github.com/nexushoratio/python'
Issues = 'https://github.com/nexushoratio/python/issues'

[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

