[project]
name = 'mundane'
description = 'A small library for handling mundane things.'
license = {file = 'LICENSE'}
keywords = ['argparse', 'logging', 'cli']
classifiers = [
  'Programming Language :: Python :: 3',
  'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
  'Operating System :: POSIX',
]
authors = [
  {name = 'Mike Castle', email = 'dalgoda@gmail.com'},
]
dependencies = [
  'humanize>=4.4.0',
]
dynamic = ['version']

[project.urls]
Repository = 'https://github.com/nexushoratio/python'
Issues = 'https://github.com/nexushoratio/python/issues'

[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[tool.coverage.run]
branch = true
command_line = '-m unittest discover -p *_test.py'
source = ['.']

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3
skipsdist = True
isolated_build = True

[testenv]
sitepackages = True
commands =
    python -m coverage run
    python -m coverage report
"""
