[project]
name = 'mundane'
description = 'A small library for handling mundane things.'
license = {file = 'LICENSE'}
keywords = ['argparse', 'logging', 'cli']
classifiers = [
  'Programming Language :: Python :: 3',
  'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
  'Operating System :: POSIX',
]
authors = [
  {name = 'Mike Castle', email = 'dalgoda@gmail.com'},
]
dependencies = [
  'humanize>=4.4.0',
  'platformdirs',
  'psutil>=2.0.0',
]
dynamic = ['version']

[project.urls]
Repository = 'https://github.com/nexushoratio/py-mundane'
Issues = 'https://github.com/nexushoratio/py-mundane/issues'

[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[tool.yapf]
column_limit = 78
join_multiple_lines = false
space_between_ending_comma_and_closing_bracket = false
split_before_arithmetic_operator = true
split_before_dot = true
split_before_first_argument = true
split_complex_comprehension = true

[tool.pylint.basic]
docstring-min-length = 2
good-names = ["setUpModule"]
no-docstring-rgx = "(^__|_?test.*|.*Test)"

[tool.pylint.messages_control]
disable = [
  'use-dict-literal',
  'use-list-literal',
]

[tool.pylint.miscellaneous]
notes = ["FIXME"]

[tool.mypy]
files = 'mundane'
enable_incomplete_feature = [
  'Unpack'
]

[tool.coverage.run]
branch = true
data_file = '.coverage/data_file'
command_line = '-m unittest discover -p *_test.py'
source = ['.']

[tool.coverage.html]
directory = '.coverage/html'

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3
skipsdist = True
isolated_build = True

[testenv]
passenv = PYTHON*
sitepackages = True
commands =
    python -m yapf -i -r mundane
    python -m pylint mundane
    python -m mypy
    python -m coverage run
    python -m coverage report
    python -m coverage html --fail-under 100
"""
